<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.administrator.concentrationea.Jugar"
    tools:showIn="@layout/activity_jugar">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtpl"
        android:text="@string/players"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32sp"
        android:text="@string/p1"
        android:id="@+id/btnp1"
        android:layout_below="@+id/txtpl"
        android:layout_marginTop="32sp"
        android:onClick="startGame"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32sp"
        android:text="@string/p2"
        android:id="@+id/btnp2"
        android:layout_below="@+id/btnp1"
        android:layout_marginTop="32sp"
        android:onClick="startGame"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32sp"
        android:text="@string/p3"
        android:id="@+id/btnp3"
        android:layout_below="@+id/btnp2"
        android:layout_marginTop="32sp"
        android:onClick="startGame"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32sp"
        android:id="@+id/btnp4"
        android:layout_below="@+id/btnp3"
        android:text="@string/p4"
        android:layout_marginTop="32sp"
        android:onClick="startGame"
        />

</RelativeLayout>
