<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.administrator.concentrationea.Acerca"
    tools:showIn="@layout/activity_acerca">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developer_name"
        android:textSize="18sp"
        android:id="@+id/Devname"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Devname"
        android:id="@+id/Devmail"
        android:textSize="18sp"
        android:layout_marginTop="12sp"
        android:text="@string/developer_email"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Devmail"
        android:textSize="18sp"
        android:layout_marginTop="32sp"
        android:id="@+id/devMot"
        android:text="@string/developer_motivation"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:layout_below="@+id/devMot"
        android:layout_marginTop="32sp"
        android:layout_centerInParent="true"
        android:onClick="resultAction"
        />
</RelativeLayout>
