<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.administrator.concentrationea.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:id="@+id/HelloText"
        android:text="@string/Inicio"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Jugar"
        android:layout_below="@id/HelloText"
        android:layout_marginTop="32sp"
        android:padding="32sp"
        android:onClick="play"
        android:id="@+id/BtnPlay"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Acerca"
        android:layout_below="@id/BtnPlay"
        android:layout_marginTop="32sp"
        android:padding="32sp"
        android:onClick="about"
        android:id="@+id/BtnAbout"
        />

</RelativeLayout>
